--- a/assets/style.css
+++ b/assets/style.css
@@ -70,9 +70,30 @@
     border-radius: 15px;
     text-shadow: none;
   }
-
-
-
-
-
   /* header end */
+
+  /* Subtitle Start */
+
+  .subtitle {
+      background-image: url(./images/ocean\ bg.jpeg);
+      background-size: cover;
+      background-attachment: fixed;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding: 40px 0px;
+  }
+
+  .subtitle h2 {
+      background: var(--tertiary-color);
+      color: var(--primary-color);
+      text-align: right;
+      width: 75%;
+      margin-left: 700px;
+      padding-right: 15px;
+      
+     
+      
+      
+  }
