--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,7 @@
   body {
      color: var(--primary-color);
      font-family: Verdana, Geneva, Tahoma, sans-serif;
+     
 
   }
 
@@ -33,10 +34,15 @@
   }
 
   h1 {
-      padding: 10px 5px 5px 30px;
+      
       font-size: 36px;
       background-color: var(--tertiary-color);
   }
+
+  h1 a {
+    padding: 10px 10px 10px 30px;
+  }
+
 
   header a {
       text-decoration: none;
@@ -75,6 +81,7 @@
   /* footer start */
   footer {
       color: var(--secondary-color);
+      padding: 20px;
   }
   /* footer end */
 
@@ -97,22 +104,39 @@
       text-align: right;
       width: 75%;
       margin-left: 700px;
-      padding-right: 15px; 
+      padding-right: 15px;
+  }
+
+  .subtitle img {
+      max-height: 150px;
+      max-width: 150px;
+      margin-left: 10px;
+      border: 2px solid;
   }
   /* subtitle end */
 
   /* section title start */
 
   .section-title {
-      font-size: 36px;
+      
       color: var(--secondary-color);
-      border-right: 6px solid;
-      text-align: left;
-      padding-left: 30px;
-      padding-right: 90px;
+      padding-left: 30px;   
       margin: auto 40px;
+      margin-top: 20px;
       display: flex;
       width: 23%;
+      align-items: stretch;
+      max-width: 95%;
+      flex-direction: column;
+  }
+
+  .section-title h2 {
+    font-size: 36px;
+    border-right: 6px solid;
+    text-align: left;
+    padding-right: 40px;
+    flex-shrink: inherit;
+    align-items: flex-start;
   }
 /* section title end */
 
@@ -139,26 +163,178 @@
     justify-content: space-between;
 }
 
+.my-work {
+    flex: 10px;
+    flex-wrap: wrap;
+    padding: 40px;
+    margin: 5px;
+    border: 10px var(--tertiary-color) ;
+}
+
 .run-buddy {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-image: url(./images/Run-buddy-ss.png);
+    background-image: url(./images/runner.jpeg);
     background-size: cover;
     background-attachment: fixed;
-    margin: auto
+    background-color:var(--tertiary-color);
+    margin: auto;
+    min-height: 300px;
+    max-height: 300px;
+    border: 6px solid;
+    border-radius: 3px;
 
 }
 
-.run-buddy h4 {
+.run-buddy a {
     background-color: var(--tertiary-color);
     color: var(--primary-color);
+    flex: .05;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    margin-left: 5px;
+    text-align: center;
+    min-height: 60px;
+    max-height: 60px;
+    padding: 20px;
+    text-decoration: none;
+    font-weight: bold;
+    
+}
+
+.run-buddy:hover{
+    mask-image: radial-gradient(10);
+    border-color: var(--tertiary-color);
+    border-style:ridge;
+    opacity: 85%;
 
 }
 
-.rb-image {
+.run-buddy a:hover {
+    border: 1px solid;
+    /* border-radius: 10px; */
+    text-align: center;
+}
+
+/* end runbuddy */
+
+/* sub work start */
+
+.sub-work {
+    display: flex;
+    flex-flow: column;
+    justify-content: space-between;
+}
+
+.sub-work article {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.sub-work article div {
+    /* max-width: 200px;
+    max-height: 130px;
+    min-height: 130px; */
+    border: 3px solid;
+    border-radius: 2px;
+    padding: 10px;
+    margin-top: 30px;
+    margin-left: 3px;
+    margin-right: 3px;
+    justify-content: space-between;
+    flex: .5;
+    align-items: center;
+}
+
+.robot-gladiators {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-image: url(./images/robot.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    margin: auto;
+    min-height: 150px;
+    max-height: 150px;
+    border: 6px solid;
+}
+
+
+.calculator {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-image: url(./images/calculator.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    margin: auto;
+    min-height: 150px;
+    max-height: 150px;
+    border: 6px solid;
+}
+
+.pastel-puzzels {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-image: url(./images/puzzle.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    margin: auto;
+    min-height: 150px;
+    max-height: 150px;
+    border: 6px solid;
+}
+
+
+.led-wall {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    background-image: url(./images/led.jpeg);
+    background-size: cover;
+    background-attachment: fixed;
+    margin: auto;
+    min-height: 150px;
+    max-height: 150px;
+    border: 6px solid;
+}
+
+
+.sub-work a {
+    background-color: var(--tertiary-color);
+    color: var(--primary-color);
+    flex: .05;
+    margin-top: 50px;
+    margin-bottom: 40px;
+    margin-left: 5px;
+    text-align: center;
+    min-height: 60px;
+    max-height: 60px;
+    padding: 20px;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.sub-work article div:hover {
+    mask-image: radial-gradient(10);
+    border-color: var(--tertiary-color);
+    border-style:ridge;
+    opacity: 85%;
 
 }
+
+.sub-work article div a:hover {
+    border: 1px solid;
+    /* border-radius: 10px; */
+    text-align: center;
+}
+
+/* end sub work */
+
+
 
 
 /* contact me start */
@@ -167,6 +343,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    background-size: cover;
     align-items: center;
 }
 
@@ -181,6 +358,8 @@
     justify-content: space-between;
     list-style: none;
     text-align: center;
+    max-width: 75%;
+
 }
 .contact div ul li a {
     text-decoration: none;
@@ -189,6 +368,31 @@
     border-bottom: 3px solid;
     margin: 30px
 }
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header {
+      /* this will be applied on any screen smaller than 980px */
+     
+    }
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    header h1 {
+      /* this will be applied on any screen between 768px and 575px */
+    }
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    body {
+        margin: 50px;
+
+
+      /* this will be applied on any screen smaller than 575px */
+    }
+  }
 
 
 
