--- a/assets/style.css
+++ b/assets/style.css
@@ -128,6 +128,7 @@
       align-items: stretch;
       max-width: 95%;
       flex-direction: column;
+      flex-flow: wrap;
   }
 
   .section-title h2 {
@@ -354,11 +355,10 @@
 }
 
 .contact div ul {
-    display: flex;
-    justify-content: space-between;
     list-style: none;
     text-align: center;
-    max-width: 75%;
+    max-width: 100%;
+    display: flex;
 
 }
 .contact div ul li a {
@@ -366,32 +366,145 @@
     color: var(--secondary-color);
     padding: 20px 20px 5px 20px;
     border-bottom: 3px solid;
-    margin: 30px
+    margin: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    
 }
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
-    header {
+
+        header {
+            padding-bottom: 0;
+            justify-content: center;
+          }
+        
+          header h1 {
+            width: 100%;
+            text-align: center;
+          }
+        
+          header nav ul {
+            margin-top: 20px;
+            width: 100%;
+            justify-content: center;
+          }
+        
+          header nav ul li a {
+            font-size: 20px;
+          }
+        
+          .contact {
+            text-align: center;
+            width: 100%;
+          }
       /* this will be applied on any screen smaller than 980px */
      
-    }
-  }
+        }
+  
   
   /* MEDIA QUERY FOR TABLETS AND SMALLER */
   @media screen and (max-width: 768px) {
-    header h1 {
+
+    
+    .subtitle h2 {
+        /* padding: 10 30; */
+        margin: 0px;
+        align-content: flex-start;
       /* this will be applied on any screen between 768px and 575px */
     }
   }
   
   /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
   @media screen and (max-width: 575px) {
-    body {
-        margin: 50px;
 
-
+    /* body {
+        display: flex;
+        flex-wrap: wrap;
+    } */
+    
+    header {
+        padding-bottom: 0px;
+        justify-content: center;
+        width: 100%;
+        margin-right: 0px;
+        align-content: center;
       /* this will be applied on any screen smaller than 575px */
     }
+
+    header h1 {
+        text-align: left;
+        width: 100%;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        margin-left: 0px;
+        width: 100%;
+        justify-content: center;
+        padding-left: 0px;
+      }
+    
+      header nav ul li a {
+        font-size: 20px;
+      }
+
+      .subtitle h2{
+        margin: 30px;
+        padding: 30px;
+        width: 100%;
+    }
+
+    .subtitle img {
+        width: 100%;
+    }
+
+    .section-title {
+        border: 0px;
+        flex-flow: wrap;
+        align-content: center;
+        /* width: 100%; */
+    }
+    .about-me {
+        flex-wrap: wrap;
+        align-items: center;
+        width: 100%;
+    }
+
+    .work {
+        flex-wrap: wrap;
+        align-content: center;
+        width: 100%;
+    }
+    
+      .contact {
+          flex-wrap: wrap;
+         align-content: center;
+         width: 100%;
+         padding: 10px;
+         display: flex;
+      }
+
+      .contact div ul {
+        list-style: none;
+        text-align: center;
+        display: list-item;
+    
+    }
+
+      .contact-links ul li{
+          flex-wrap: wrap;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 100%;
+          border-bottom: 0px;
+          margin: 10px;
+          padding: 10px;
+      }
+
+
   }
 
 
