--- a/assets/style.css
+++ b/assets/style.css
@@ -282,7 +282,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-image: url(./images/puzzle.jpeg);
+    background-image: url(./images/campground.jpeg);
     background-size: cover;
     background-attachment: fixed;
     margin: auto;
