Added Project 2 to my portfolio

--- a/assets/style.css
+++ b/assets/style.css
@@ -296,7 +296,7 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-image: url(./images/led.jpeg);
+    background-image: url(./images/doggie.jpeg);
     background-size: cover;
     background-attachment: fixed;
     margin: auto;
